# FIS_ES

./: DownloadMusic.xml  README.md
Final/: DownloadMusic.xml  DownloadMusic_.xml  Untitled Diagram.xml
WIP/Documents/: README.md
WIP/Users/HiepPD/: README.md
WIP/Users/HiepPD/FISWeb/: FISWeb.sln
WIP/Users/HiepPD/FISWeb/FISWeb/: FISWeb.csproj  Global.asax  Global.asax.cs  Startup.cs
WIP/Users/HuynhLD/: .cproject  .project  Tóm tắt file 225326_FingerprintProcess.docx
WIP/Users/HuynhLD/FIS/: CMakeLists.txt  FIS.cpp  InsertDataToSQL.cpp  main.cpp
WIP/Users/HuynhLD/FIS/header/: AdaptiveLocalThreshold.h  Minutiae.h  utility.h
WIP/Users/HuynhLD/FIS/img/: img_l_4
WIP/Users/HuynhLD/FIS/model/: Neuron.cpp  TrainningData.cpp
WIP/Users/HuynhLD/FIS/src/: AdaptiveLocalThreshold.cpp  CMakeLists.txt  Functions.cpp  Minutiae.cpp
WIP/Users/HuynhLD/FIS/tranning/: t1
WIP/Users/HuynhLD/NeuralNetwork/src/: exec  main.cpp
WIP/Users/HuynhLD/NeuralNetwork_fn/trainsample/: fgsample
WIP/Users/HuynhLD/OpenCVblueprint/R305Communication/: synoapi.h
WIP/Users/HuynhLD/OpenCVblueprint/src/: FIS_System.cpp
WIP/Users/HuynhLD/R305Communication/: main.cpp  synoapi.cpp  synoapi.h  utility.h
WIP/Users/HuynhLD/corepoint_delta_detection/: CMakeLists.txt  main.cpp
WIP/Users/HuynhLD/np/src/: note  (+2 more)
WIP/Users/NamNV/: 113172239SynoDemo_SynoAPI-for-WinCE.rar
WIP/Users/NamNV/Draft/: AdaptiveLocalThreshold.cpp  BinarisationTest  BinarisationTest.cpp  CMakeLists.txt  CrossingNumber.cpp  CrossingNumber.h  Filter.cpp  Functions.cpp  Functions.h  GuoHall.cpp  Ideka.cpp  Ideka.h  InsertDataToSQL  InsertDataToSQL.cpp  Makefile  Minutiae.cpp  Minutiae.db  Minutiae.h  README.md  SQL.cpp  SQL.h  fingerprint  img_l_1_2  img_l_1_3  img_l_2_2  img_l_2_3
WIP/Users/NamNV/FIS/: BinarisationTest.cpp  CMakeLists.txt  FIS.cpp  InsertDataToSQL.cpp  README.md  config.ini  fingerprint_process.cpp
WIP/Users/NamNV/FIS/database/: Minutiae.db  Minutiae_bk.db  Minutiae_bk_19_12_2016.db  Minutiae_bk_2.db  pre_final_database.db
WIP/Users/NamNV/FIS/header/: Config.h  Filter.h  Functions.h  GuoHall.h  MaskGabor.h  Minutiae.h  PiNetwork.h  SQL.h  csv.h  logs.h  synoapi.h  utility.h
WIP/Users/NamNV/FIS/src/: CMakeLists.txt  Config.cpp  CrossingNumber.cpp  Filter.cpp  Functions.cpp  GuoHall.cpp  Ideka.cpp  MaskGabor.cpp  Minutiae.cpp  PiNetwork.cpp  SQL.cpp  csv.cpp  logs.cpp  synoapi.cpp
WIP/Users/NamNV/Fingerprint identify/: BinarisationTest  BinarisationTest.cpp  CrossingNumber.cpp  Filter.cpp  Filter.h  Functions.cpp  Functions.h  Makefile  Minutiae.cpp  Minutiae.h  fingerprint_process.cpp
WIP/Users/NamNV/Network and config/: Config.cpp  Config.h  PiNetwork.cpp  PiNetwork.h  config.ini  network
WIP/Users/NamNV/Port Demo/: Makefile  main.cpp  namte  synoapi.cpp  synoapi.h  test.c  utility.h
(+81 files in other folders)
